# fmatch

./: ChangeLog  Makefile.am  configure.ac  fmatch3.kdev4
src/: Makefile.am  alpha.cpp  alpha.h  alphastore.cpp  alphastore.h  atom.cpp  atom.h  atompair.cpp  atompair.h  configuration.cpp  configuration.h  constants.h  dnchar.cpp  dnchar.h  eam.cpp  eam_mei.cpp  esppoint.cpp  esppoint.h  ewald.cpp  ff.cpp  ff.h  genetic.cpp  genetic.h  interaction.cpp  interaction.h  intradef.cpp  intradef.h  io.cpp  io_fm.cpp  io_xyz.cpp  kvector.cpp  kvector.h  lineparser.cpp  lineparser.h  list.h  main.cpp  matrix.cpp  matrix.h  md.cpp  md.h  (+27 more)
test/: al-test-baskes.xyzf  al-test-mei.txt  al-test.txt  al256crystal.xyzf  ethanol-fit.txt  ethanol-oplsaa-intra-vdw-elec.CONTROL  ethanol-oplsaa-intra-vdw-elec.OUT  ethanol-oplsaa-intra-vdw-elec.txt  ethanol-oplsaa-intra-vdw-elec.xyzf  ethanol-oplsaa-intra-vdw.CONTROL  ethanol-oplsaa-intra-vdw.OUT  ethanol-oplsaa-intra-vdw.txt  ethanol-oplsaa-intra-vdw.xyzf  ethanol-oplsaa-intra.CONFIG  ethanol-oplsaa-intra.CONTROL  ethanol-oplsaa-intra.txt  ethanol-oplsaa-intra.xyzf  md.traj.xyzvf  water-fit.txt  water-spcfw-intra-vdw-elec.CONTROL  water-spcfw-intra-vdw-elec.txt  water-spcfw-intra-vdw.CONFIG  water-spcfw-intra-vdw.CONTROL  water-spcfw-intra-vdw.txt  water-spcfw-intra.CONFIG  water-spcfw-intra.CONTROL  water-spcfw-intra.FIELD  water-spcfw-intra.txt  water-spcfw-intra.xyzf
