bin_PROGRAMS = fmatch3

fmatch3_SOURCES = alpha.cpp alphastore.cpp atom.cpp atompair.cpp dnchar.cpp eam.cpp esppoint.cpp ewald.cpp ff.cpp genetic.cpp interaction.cpp intradef.cpp io.cpp io_fm.cpp io_xyz.cpp kvector.cpp lineparser.cpp md.cpp random.cpp simplex.cpp species.cpp strategy.cpp strategy_genetic.cpp strategy_loop.cpp strategy_grid.cpp strategy_hidden.cpp strategy_predict.cpp strategy_print.cpp strategy_randomise.cpp strategy_rattle.cpp strategy_sd.cpp strategy_select.cpp strategy_simplex.cpp system.cpp parameter.cpp configuration.cpp matrix.cpp main.cpp

noinst_HEADERS = alpha.h alphastore.h atom.h atompair.h configuration.h constants.h dnchar.h esppoint.h ff.h genetic.h interaction.h intradef.h kvector.h lineparser.h list.h matrix.h md.h parameter.h random.h reflist.h simplex.h species.h strategy.h system.h vdw.h vector3.h

INCLUDES = -I./ 

